--- a/16thNov-OpenCV_Workshop/README
+++ b/16thNov-OpenCV_Workshop/README
@@ -1,64 +1,60 @@
-## Gesture Dino Game — Documentation
+Gesture Dino Game
 
-### 🎯 Overview
+## 🎯 Overview
 
 This project is a **Chrome Dino–style running game** controlled entirely by **hand gestures** — no keyboard or mouse needed!
 
-You jump using your **open palm**, detected in real time via your webcam using **MediaPipe** and **OpenCV**.
+You jump using your **open palm**, detected in real time via your webcam using **MediaPipe** and **OpenCV**.  
 The game visuals and physics are built using **Pygame**.
 
----
 
-### 🧩 Main Features
+## 🧩 Main Features
 
-✅ Hand Gesture Jump (Open Palm → Jump)
-✅ Auto-detect ground level from background image
-✅ Increasing speed and score as game progresses
-✅ Smooth restart after collision
-✅ Real-time webcam window showing gesture detection
-✅ Fully offline — runs locally with camera
+- ✅ Hand Gesture Jump (Open Palm → Jump)  
+- ✅ Auto-detect ground level from background image  
+- ✅ Increasing speed and score as game progresses  
+- ✅ Smooth restart after collision  
+- ✅ Real-time webcam window showing gesture detection  
+- ✅ Fully offline — runs locally with camera  
 
----
 
-### 🛠 Requirements
+## 🛠 Requirements
 
 Before running the game, install dependencies:
 
 ```bash
 pip install pygame opencv-python mediapipe numpy
-```
+````
 
----
 
-### 📂 Project Files
+## 📂 Project Files
 
-| File Name            | Purpose                           |
-| -------------------- | --------------------------------- |
-| `game.py`            | Main game logic + gesture control |
-| `assets/back.png`    | Background image                  |
-| `assets/dino.png`    | Dino sprite image                 |
+| File Name         | Purpose                           |
+| ----------------- | --------------------------------- |
+| `game.py`         | Main game logic + gesture control |
+| `assets/back.png` | Background image                  |
+| `assets/dino.png` | Dino sprite image                 |
 
-*(You must have the `assets` folder in the same directory.)*
+> **Note:** You must have the `assets` folder in the same directory as `game.py`.
 
----
 
-### 🎮 How It Works
+## 🎮 How It Works
 
-#### 1. **Game Setup**
+### 1. Game Setup
 
 * Initializes Pygame window (900×400).
 * Loads background (`back.png`) and Dino (`dino.png`) images.
-* Detects where the ground is (so the dino stands correctly on it).
+* Detects ground level automatically.
 * Spawns random cactus-like obstacles that scroll left.
 
-#### 2. **Camera + Hand Detection**
+### 2. Camera + Hand Detection
 
 * Opens webcam using `cv2.VideoCapture(0)`.
 * Uses **MediaPipe Hands** to track your hand landmarks.
 * Checks if **4 or more fingers are raised** → counts as an **open palm**.
 * Displays a second window showing your live camera feed + detected hand skeleton.
 
-#### 3. **Jump Control**
+### 3. Jump Control
 
 * If an open palm is detected (`open_hand=True`) and the dino is on the ground, it triggers a **jump**.
 * Jump physics:
@@ -67,33 +63,31 @@ pip install pygame opencv-python mediapipe numpy
   * Gravity = 0.8 (pulls down)
 * Smooth jump arc like the Chrome Dino game.
 
-#### 4. **Obstacles & Scoring**
+### 4. Obstacles & Scoring
 
 * Random cactus-shaped green obstacles move left.
 * Player score increases as time passes.
 * Game speed increases every few hundred points.
 
-#### 5. **Collision & Restart**
+### 5. Collision & Restart
 
 * If dino collides with a cactus:
 
   * Displays “GAME OVER - Restarting...”
   * Waits 0.9 seconds
-  * Resets score, obstacles, and speed automatically.
+  * Resets score, obstacles, and speed automatically
 
----
 
-### 🧠 Gesture Logic Explained
+## 🧠 Gesture Logic Explained
 
-| Condition                | Meaning                                                | Action    |
-| ------------------------ | ------------------------------------------------------ | --------- |
-| ✋ Open Palm              | 4 or more fingers up                                   | Jump      |
-| ✊ Closed Fist            | Fingers down                                           | No action |
-| 🖐️ Continuous Open Palm | Only first frame triggers jump (no repeated jump spam) |           |
+| Condition                | Meaning                        | Action    |
+| ------------------------ | ------------------------------ | --------- |
+| ✋ Open Palm              | 4 or more fingers up           | Jump      |
+| ✊ Closed Fist            | Fingers down                   | No action |
+| 🖐️ Continuous Open Palm | Only first frame triggers jump |           |
 
----
 
-### 🪄 Controls Summary
+## 🪄 Controls Summary
 
 | Action      | How to Perform                    |
 | ----------- | --------------------------------- |
@@ -101,21 +95,19 @@ pip install pygame opencv-python mediapipe numpy
 | Quit Game   | Press **ESC** or close the window |
 | Quit Camera | Press **ESC** on camera window    |
 
----
 
-### 💡 Troubleshooting
+## 💡 Troubleshooting
 
 | Issue                      | Solution                                                              |
 | -------------------------- | --------------------------------------------------------------------- |
-| Camera not opening         | Check webcam connection; use another index like `cv2.VideoCapture(1)` |
+| Camera not opening         | Check webcam connection; try another index like `cv2.VideoCapture(1)` |
 | Error: “Cannot load asset” | Ensure `assets/back.png` and `assets/dino.png` exist                  |
 | Dino not jumping           | Ensure your hand is clearly visible and well-lit                      |
-| Too fast / Too slow        | Adjust `INITIAL_SPEED`, `SPEED_INCREASE_EVERY` in the config section  |
+| Too fast / Too slow        | Adjust `INITIAL_SPEED` or `SPEED_INCREASE_EVERY` in config section    |
 | Frame stuck / laggy        | Reduce camera resolution or close other apps using webcam             |
 
----
 
-### 🧾 Code Sections Summary
+## 🧾 Code Sections Summary
 
 | Section          | Function                                                          |
 | ---------------- | ----------------------------------------------------------------- |
@@ -126,28 +118,28 @@ pip install pygame opencv-python mediapipe numpy
 | Main Loop        | Combines camera input, gesture detection, game logic, and drawing |
 | Cleanup          | Closes camera and game windows properly                           |
 
----
 
-### 📸 Workshop Flow (Suggested)
+## 📸 Workshop Flow (Suggested)
 
 1. Run a **camera test** using:
 
-   ```bash
-   python -m cv2
-   ```
+```bash
+python -m cv2
+```
 
-   (or use a separate `camera_test.py` to verify webcam works)
-2. Run this game:
+(or use a separate `camera_test.py` to verify webcam works)
 
-   ```bash
-   python gesture_dino_ui.py
-   ```
+2. Run the game:
+
+```bash
+python gesture_dino_ui.py
+```
+
 3. Show open hand ✋ to jump.
 4. Demonstrate gesture control, score increase, and auto-restart.
 
----
 
-### 🧰 Tech Stack
+## 🧰 Tech Stack
 
 * **Python 3.8+**
 * **MediaPipe** – Real-time hand landmark detection
@@ -155,11 +147,8 @@ pip install pygame opencv-python mediapipe numpy
 * **Pygame** – Game engine and rendering
 * **NumPy** – Array math and background analysis
 
----
-
-### 🏁 Summary
+## 🏁 Summary
 
 You’ve built a **gesture-controlled Chrome Dino game clone**!
 The Dino runs automatically, and you jump using hand gestures tracked live via your webcam.
 Perfect for workshops, demos, and learning **computer vision + game integration**.
-
